@@ -1,87 +1,115 @@
 package com.earacg.earaconnect.config;
 
-import com.earacg.earaconnect.security.JwtAuthFilter;
-import org.springframework.beans.factory.annotation.Value;
+import com.earacg.earaconnect.security.DatabaseUserDetailsService;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.security.authentication.AuthenticationManager;
+import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
+import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
+import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
+import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
-import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+import org.springframework.security.web.context.HttpSessionSecurityContextRepository;
+import org.springframework.security.web.context.SecurityContextRepository;
+import org.springframework.boot.web.servlet.server.CookieSameSiteSupplier;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
 @EnableWebSecurity
+@EnableMethodSecurity
 public class SecurityConfig {
 
-    private final JwtAuthFilter jwtAuthFilter;
+    private final DatabaseUserDetailsService userDetailsService;
 
-    // Set FRONTEND_URL in Railway env vars, e.g. https://front-end-sandra.vercel.app
-    @Value("${frontend.url:https://front-end-sandra.vercel.app}")
-    private String frontendUrl;
-
-    public SecurityConfig(JwtAuthFilter jwtAuthFilter) {
-        this.jwtAuthFilter = jwtAuthFilter;
+    public SecurityConfig(DatabaseUserDetailsService userDetailsService) {
+        this.userDetailsService = userDetailsService;
     }
 
     @Bean
-    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
+    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-            // Disable CSRF — not needed for stateless JWT APIs
-            .csrf(csrf -> csrf.disable())
-
-            // CORS — allow Vercel frontend
-            .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-
-            // Stateless — no HttpSession created or used
-            .sessionManagement(sm -> sm
-                .sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-
-            // Public endpoints — everything else requires a valid JWT
-            .authorizeHttpRequests(auth -> auth
-                .requestMatchers(
-                    "/api/auth/login",
-                    "/api/auth/logout",
-                    "/api/auth/forgot-password",
-                    "/api/auth/reset-password",
-                    "/api/auth/verify-reset-token",
-                    "/uploads/**"
-                ).permitAll()
-                .anyRequest().authenticated()
-            )
-
-            // Plug in the JWT filter before Spring's username/password filter
-            .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
+                .csrf(csrf -> csrf.disable())
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.IF_REQUIRED))
+                .securityContext(ctx -> ctx.securityContextRepository(securityContextRepository()))
+                .authorizeHttpRequests(auth -> auth
+                        .requestMatchers("/api/auth/login", "/api/auth/logout", "/api/auth/forgot-password",
+                                "/api/auth/reset-password", "/api/auth/test-email", "/api/auth/current-user",
+                                "/api/auth/health")
+                        .permitAll()
+                        // Block test/debug endpoints entirely
+                        .requestMatchers("/api/test/**", "/api/email-test/**", "/api/debug/**").denyAll()
+                        // Admin-only endpoints
+                        .requestMatchers("/api/admin/**").hasRole("ADMIN")
+                        .requestMatchers("/api/auth/profile").authenticated()
+                        .anyRequest().authenticated())
+                .authenticationProvider(daoAuthenticationProvider());
 
         return http.build();
     }
 
     @Bean
+    public PasswordEncoder passwordEncoder() {
+        return new BCryptPasswordEncoder();
+    }
+
+    @Bean
+    public DaoAuthenticationProvider daoAuthenticationProvider() {
+        DaoAuthenticationProvider provider = new DaoAuthenticationProvider();
+        provider.setUserDetailsService(userDetailsService);
+        provider.setPasswordEncoder(passwordEncoder());
+        return provider;
+    }
+
+    @Bean
+    public AuthenticationManager authenticationManager(AuthenticationConfiguration configuration) throws Exception {
+        return configuration.getAuthenticationManager();
+    }
+
+    @Bean
+    public SecurityContextRepository securityContextRepository() {
+        return new HttpSessionSecurityContextRepository();
+    }
+
+    /**
+     * Ensures JSESSIONID is sent with SameSite=Lax so browsers do not silently
+     * drop the cookie on cross-origin requests (React port 3000 → Spring port
+     * 8081).
+     * Use CookieSameSiteSupplier.ofNone() + HTTPS for production deployments.
+     */
+    @Bean
+    public CookieSameSiteSupplier cookieSameSiteSupplier() {
+        return CookieSameSiteSupplier.ofLax();
+    }
+
+    @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration config = new CorsConfiguration();
-
-        // Allow your Vercel frontend — add more origins if needed
-        config.setAllowedOrigins(List.of(
-            frontendUrl,
-            "http://localhost:3000",
-            "http://localhost:5173"
-        ));
-
-        config.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-        config.setAllowedHeaders(List.of("*"));
-
-        // Don't need credentials:true since we're using Authorization header, not cookies
-        config.setAllowCredentials(false);
-
-        config.setMaxAge(3600L);
+        CorsConfiguration configuration = new CorsConfiguration();
+        // Build allowed origins list, filtering out empty strings
+        List<String> allowedOrigins = new java.util.ArrayList<>(Arrays.asList(
+                "http://localhost:3000","https://front-end-sandra.vercel.app", "http://localhost:3001", "http://localhost:3002",
+                "https://backend-sandra-production.up.railway.app","https://redesigned-disco-wr7rqqj7w5wxc9j5g-3000.app.github.dev"));
+        String frontendUrl = System.getenv("FRONTEND_URL");
+        if (frontendUrl != null && !frontendUrl.isBlank()) {
+            allowedOrigins.add(frontendUrl);
+        }
+        configuration.setAllowedOrigins(allowedOrigins);
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH", "HEAD"));
+        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setExposedHeaders(Arrays.asList("Set-Cookie", "JSESSIONID"));
+        configuration.setAllowCredentials(true);
+        configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", config);
+        source.registerCorsConfiguration("/**", configuration);
         return source;
     }
 }
